fixed spacing and carousel

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,8 @@
 @import "util/colors";
 
 main {
-  margin-top: 2%;
+  margin-top: 1.5%;
   .slideshow-row {
-    margin-top: 3%;
+    margin-top: 2%;
   }
 }
