--- a/src/app/components/news-card/news-card.component.scss
+++ b/src/app/components/news-card/news-card.component.scss
@@ -1,8 +1,10 @@
 @import "../../util/colors";
 
+
 .card {
 
   border: none !important;
+  margin-bottom: 2%;
 
   background-image: url("../../../assets/img/back-to-school.jpg");
   -webkit-background-size: cover;
