--- a/src/app/components/photo-carousel/photo-carousel.component.scss
+++ b/src/app/components/photo-carousel/photo-carousel.component.scss
@@ -4,22 +4,12 @@ img {
   // border: 8px solid black;
 }
 
-.carousel-inner .carousel-item-right.active,
-.carousel-inner .carousel-item-next {
-  transform: translateX(33.33%) !important;
-}
-
-.carousel-inner .carousel-item-left.active, 
-.carousel-inner .carousel-item-prev {
-  transform: translateX(-33.33%) !important; 
-}
-  
-.carousel-inner .carousel-item-right,
-.carousel-inner .carousel-item-left{ 
-  transform: translateX(0) !important;
-}
-
 .carousel-inner img {
   margin: auto;
 
 }
+
+.row mx-auto my-auto{
+  margin-bottom: 2%;
+}
+
